@@ -1,4 +1,4 @@
-# Copyright 2004, 2007-2012 Free Software Foundation, Inc.
+# Copyright 2004, 2007, 2008, 2009 Free Software Foundation, Inc.
 
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -17,6 +17,12 @@
 # It tests that the correct breakpoint is reported when we hit a
 # thread-specific breakpoint inserted for several threads.
 
+if $tracelevel then {
+	strace $tracelevel
+}
+
+set prms_id 0
+set bug_id 0
 
 set testfile "thread-specific"
 set srcfile ${testfile}.c
@@ -40,14 +46,11 @@ proc get_thread_list { } {
     -re "New Thread \[^\n\]*\n" {
       exp_continue
     }
-    -re "^ *Id *Target Id\[^\n\]*\n" {
-      exp_continue
-    }
-    -re "^\\*  *(\[0-9\]*) *Thread \[^\n\]*main\[^\n\]*\n" {
+    -re "^\\*  *(\[0-9\]*) Thread \[^\n\]*main\[^\n\]*\n" {
       set thr_list "$expect_out(1,string) $thr_list"
       exp_continue
     }
-    -re "^  *(\[0-9\]*) *Thread \[^\n\]*\n" {
+    -re "^  *(\[0-9\]*) Thread \[^\n\]*\n" {
       lappend thr_list $expect_out(1,string)
       exp_continue
     }
@@ -71,10 +74,8 @@ gdb_reinitialize_dir $srcdir/$subdir
 
 gdb_load ${binfile}
 
-gdb_test_no_output "set print sevenbit-strings"
-gdb_test_no_output "set width 0"
-
-gdb_test {print $_thread} ".* = 0" "thread var when not running"
+gdb_test "set print sevenbit-strings" ""
+gdb_test "set width 0" ""
 
 runto_main
 
@@ -88,8 +89,6 @@ if {[llength $threads] == 0} {
   # We have already issued a FAIL above.
   return 1
 }
-
-gdb_test {print $_thread} ".* = [lindex $threads 0]" "thread var in main"
 
 gdb_test_multiple "break $line thread [lindex $threads 0]" \
   "breakpoint $line main thread" {
@@ -107,19 +106,9 @@ gdb_test_multiple "continue" "continue to thread-specific breakpoint" {
 	-re "Breakpoint $main_breakpoint, .* at .*\r\n$gdb_prompt $" {
 	    fail "continue to thread-specific breakpoint (wrong breakpoint)"
 	}
-	-re "Breakpoint (\[0-9\]*), .* at .*\r\n$gdb_prompt $" {
-	    set this_breakpoint $expect_out(1,string)
+	-re "Breakpoint .* at .*\r\n$gdb_prompt $" {
 	    pass "continue to thread-specific breakpoint"
 	}
 }
-
-gdb_test_multiple "info breakpoint $this_breakpoint" "info on bp" {
-    -re ".*stop only in thread (\[0-9\]*).*$gdb_prompt $" {
-	set this_thread $expect_out(1,string)
-	pass "found breakpoint for thread number"
-    }
-}
-
-gdb_test {print $_thread} ".* = $this_thread" "thread var at break"
 
 return 0
